Add Departaments controller
