# docs/swagger.json
@@ -1,15 +1,15 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Sample of WebApiRest",
+        "description": "Sample of WebApiRest_Golang",
         "title": "Golang Gin API",
-        "termsOfService": "https://github.com/CastroEduardo/golang-api-rest",
+        "termsOfService": "https://github1.com/CastroEduardo/golang-api-rest",
         "contact": {},
         "license": {
             "name": "MIT",
-            "url": "https://github.com/CastroEduardo/golang-api-rest/blob/master/LICENSE"
+            "url": "https://github1.com/CastroEduardo/golang-api-rest/blob/master/LICENSE"
         },
-        "version": "1.0"
+        "version": "2.0"
     },
     "paths": {
         "/api/v1/articles/{id}": {
@@ -32,6 +32,45 @@
                         "description": "ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v2/addusersys": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Api-v2"
+                ],
+                "summary": "Add user to System",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "modelUser",
+                        "name": "modelUser",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -90,6 +129,59 @@
                 }
             }
         },
+        "/api/v2/manageDepartament": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Api-v2"
+                ],
+                "summary": "Manage Departament Sys",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "typeOperation",
+                        "name": "typeOperation",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "idParam",
+                        "name": "idParam",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "modelJson",
+                        "name": "modelJson",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v2/userlistsys": {
             "post": {
                 "security": [
@@ -103,7 +195,16 @@
                 "tags": [
                     "Api-v2"
                 ],
-                "summary": "Get list userssys 1",
+                "summary": "Get list userSys",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -196,6 +297,52 @@
                         "type": "boolean",
                         "description": "remember",
                         "name": "remember",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/checkpassword": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Post Check Password User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "password",
+                        "name": "password",
                         "in": "query",
                         "required": true
                     }
